logs/collective.groupspace.mail.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/groupspace'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/browser'...
Compiling './lib/python3.5/site-packages/collective/groupspace/mail/browser/mailview.py'...
***   File "./lib/python3.5/site-packages/collective/groupspace/mail/browser/mailview.py", line 315
    MailHostError), e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/groupspace/mail/locales'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/locales/en'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/locales/es'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/locales/fr'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/portlets'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/profiles'...
Listing './lib/python3.5/site-packages/collective/groupspace/mail/profiles/default'...
Compiling './lib/python3.5/site-packages/collective/groupspace/mail/roles.py'...
***   File "./lib/python3.5/site-packages/collective/groupspace/mail/roles.py", line 179
    MailHostError), e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/groupspace/mail/tests'...
Listing './lib/python3.5/site-packages/collective.groupspace.mail-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
